Create user settings SQLite database which stores access details

--- a/JiraHelper.Core/JiraHelper.Core.csproj
+++ b/JiraHelper.Core/JiraHelper.Core.csproj
@@ -10,6 +10,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\JiraHelper.JiraApi\JiraHelper.JiraApi.csproj" />
+    <ProjectReference Include="..\JiraHelper.Settings\JiraHelper.Settings.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
   </ItemGroup>
 
 </Project>
