--- a/JiraHelper.Settings/JiraHelper.Settings.csproj
+++ b/JiraHelper.Settings/JiraHelper.Settings.csproj
@@ -7,7 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\JiraHelper.Settings\JiraHelper.Settings.csproj" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
+    <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="9.0.9" />
   </ItemGroup>
 
 </Project>
