--- a/JiraHelper.Settings/JiraHelper.Settings.csproj
+++ b/JiraHelper.Settings/JiraHelper.Settings.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="9.0.9" />
     <PackageReference Include="System.Security.Cryptography.ProtectedData" Version="9.0.9" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
   </ItemGroup>
