--- a/JiraHelper.Core/JiraHelper.Core.csproj
+++ b/JiraHelper.Core/JiraHelper.Core.csproj
@@ -11,10 +11,15 @@
   <ItemGroup>
     <ProjectReference Include="..\JiraHelper.JiraApi\JiraHelper.JiraApi.csproj" />
     <ProjectReference Include="..\JiraHelper.Settings\JiraHelper.Settings.csproj" />
+    <ProjectReference Include="..\JiraHelper.TimeTracking\JiraHelper.TimeTracking.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="9.0.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
