--- a/package.json
+++ b/package.json
@@ -2,15 +2,21 @@
   "name": "jira-helper",
   "version": "1.0.0",
   "description": "App for managing Jira related tasks such as time tracking.",
-  "main": "dist/main.js",
+  "main": "dist/main/main/main.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "build:dev": "webpack --mode development",
-    "start": "npm run build:dev && electron .",
-    "dev": "webpack --mode development --watch",
+    "build": "npm run build:main && vite build",
+    "build:main": "tsc --project tsconfig.main.json",
+    "build:dev": "vite build --mode development",
+    "start": "npm run build:main && npm run build:dev && electron .",
+    "start:dev": "npm run build:main && cross-env NODE_ENV=development electron .",
+    "dev": "vite",
     "package": "npm run build && electron-builder"
   },
-  "keywords": ["jira", "time-tracking", "electron"],
+  "keywords": [
+    "jira",
+    "time-tracking",
+    "electron"
+  ],
   "author": "",
   "license": "ISC",
   "build": {
@@ -27,7 +33,7 @@
   "dependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "better-sqlite3": "^12.4.1",
-    "electron": "^38.2.2",
+    "electron": "^38.3.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
@@ -35,14 +41,14 @@
     "@types/node": "^24.7.2",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
+    "@vitejs/plugin-react": "^5.0.4",
+    "cross-env": "^10.1.0",
     "css-loader": "^7.1.2",
     "electron-builder": "^26.0.12",
-    "html-webpack-plugin": "^5.6.4",
+    "electron-rebuild": "^3.2.9",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.4",
     "typescript": "^5.9.3",
-    "webpack": "^5.102.1",
-    "webpack-cli": "^6.0.1",
-    "webpack-dev-server": "^5.2.2"
+    "vite": "^7.1.10"
   }
 }
