--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "better-sqlite3": "^12.4.1",
     "electron": "^38.3.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "styled-components": "^6.1.19"
   },
   "devDependencies": {
     "@types/node": "^24.7.2",
