--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.1.0",
   "description": "App for managing Jira related tasks such as time tracking.",
   "main": "dist/main/main/main.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/barney-campbell/jira-helper.git"
+  },
   "scripts": {
     "build": "npm run build:main && vite build",
     "build:main": "tsc --project tsconfig.main.json",
