--- a/.github/workflows/auto-tag-version.yml
+++ b/.github/workflows/auto-tag-version.yml
@@ -3,7 +3,7 @@ name: Auto Tag Version
 on:
   push:
     branches:
-      - master
+      - master-electron
 
 jobs:
   tag-version:
@@ -17,7 +17,7 @@ jobs:
         with:
           fetch-depth: 0
           token: ${{ secrets.GITHUB_TOKEN }}
-          ref: master
+          ref: master-electron
       
       - name: Configure Git
         run: |
@@ -82,10 +82,10 @@ jobs:
           NEW_VERSION="${{ steps.version-check.outputs.new-version }}"
           
           # Create tag
-          git tag "v$NEW_VERSION"
+          git tag "$NEW_VERSION"
           
           # Push both commit (if created) and tag
           git push origin master
-          git push origin "v$NEW_VERSION"
+          git push origin "$NEW_VERSION"
           
-          echo "Created and pushed tag v$NEW_VERSION"
+          echo "Created and pushed tag $NEW_VERSION"
