--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -36,9 +36,42 @@ jobs:
             release/*.msi
           retention-days: 30
 
-      - name: Upload Windows unpacked artifacts (optional)
+      - name: Upload Windows unpacked artifacts
         uses: actions/upload-artifact@v4
         with:
           name: jira-helper-windows-unpacked-${{ github.sha }}
           path: release/win-unpacked/
           retention-days: 7
+
+      - name: Install GitHub CLI
+        run: |
+          choco install gh
+          gh --version
+
+      - name: Get latest release tag
+        id: get_release
+        run: |
+          TAG=$(gh release list --limit 1 --repo "${{ github.repository }}" --json tagName --jq '.[0].tagName')
+          echo "LATEST_TAG=$TAG" >> $GITHUB_ENV
+
+      - name: Upload .exe and .msi to latest release
+        if: env.LATEST_TAG != ''
+        run: |
+          for file in release/*.exe release/*.msi; do
+            if [ -f "$file" ]; then
+              gh release upload "$LATEST_TAG" "$file" --repo "${{ github.repository }}" --clobber
+            fi
+          done
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload unpacked artifacts to latest release (optional)
+        if: env.LATEST_TAG != ''
+        run: |
+          for file in release/win-unpacked/*; do
+            if [ -f "$file" ]; then
+              gh release upload "$LATEST_TAG" "$file" --repo "${{ github.repository }}" --clobber
+            fi
+          done
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
