--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -44,12 +44,34 @@ jobs:
           path: release/win-unpacked/
           retention-days: 7
 
-      - name: Install GitHub CLI
-        run: |
-          choco install gh
-          gh --version
+      - name: Create GitHub Release
+        if: startsWith(github.ref, 'refs/tags/')
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref_name }}
+          release_name: Release ${{ github.ref_name }}
+          draft: false
+          prerelease: false
+          body: |
+            ## Changes in this release
+            
+            See [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/CHANGELOG.md) for details.
 
-      - name: Get latest release tag
+      - name: Upload installer to release
+        if: startsWith(github.ref, 'refs/tags/')
+        shell: pwsh
+        run: |
+          Get-ChildItem release/*.exe, release/*.blockmap, release/*.yml | ForEach-Object {
+            gh release upload "${{ github.ref_name }}" $_.FullName --repo "${{ github.repository }}" --clobber
+          }
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Get latest release tag (for branch builds)
+        if: "!startsWith(github.ref, 'refs/tags/')"
         id: get_release
         shell: pwsh
         run: |
@@ -59,7 +81,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload .exe and .msi to latest release
-        if: env.LATEST_TAG != ''
+        if: "!startsWith(github.ref, 'refs/tags/') && env.LATEST_TAG != ''"
         shell: pwsh
         run: |
           Get-ChildItem release/*.exe, release/*.msi | ForEach-Object {
@@ -69,7 +91,7 @@ jobs:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload unpacked artifacts to latest release (optional)
-        if: env.LATEST_TAG != ''
+        if: "!startsWith(github.ref, 'refs/tags/') && env.LATEST_TAG != ''"
         shell: pwsh
         run: |
           Get-ChildItem release/win-unpacked/* | ForEach-Object {
