--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -6,6 +6,9 @@ on:
       - master-electron
   workflow_dispatch:
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: windows-latest
