--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -2,8 +2,8 @@ name: Build Electron App
 
 on:
   push:
-    branches:
-      - master-electron
+    tags:
+      - '*.*.*'
   workflow_dispatch:
 
 permissions:
