--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jira-helper",
-  "version": "1.4.0",
+  "version": "1.3.2",
   "description": "App for managing Jira related tasks such as time tracking.",
   "main": "dist/main/main/main.js",
   "repository": {
@@ -32,11 +32,20 @@
     ],
     "directories": {
       "output": "release"
-    }
+    },
+    "artifactName": "${productName}-Setup-${version}.${ext}",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "barney-campbell",
+        "repo": "jira-helper"
+      }
+    ]
   },
   "dependencies": {
     "@types/better-sqlite3": "^7.6.13",
     "better-sqlite3": "^12.4.1",
+    "electron-updater": "^6.6.2",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "styled-components": "^6.1.19"
