--- a/.github/workflows/build-electron.yml
+++ b/.github/workflows/build-electron.yml
@@ -3,7 +3,7 @@ name: Build Electron App
 on:
   push:
     tags:
-      - '*.*.*'
+      - "*.*.*"
   workflow_dispatch:
 
 permissions:
@@ -20,8 +20,8 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
-          cache: 'npm'
+          node-version: "20"
+          cache: "npm"
 
       - name: Install dependencies
         run: npm ci
@@ -60,7 +60,7 @@ jobs:
           prerelease: false
           body: |
             ## Changes in this release
-            
+
             See [CHANGELOG.md](https://github.com/${{ github.repository }}/blob/${{ github.ref_name }}/CHANGELOG.md) for details.
 
       - name: Upload installer to release
